# elta

./: .dockerignore  .gitignore  README.md  docker-compose.yml  manage.py  requirements.txt  users.json
backend/: manage.py  pyproject.toml
backend/elta/: settings.py  urls.py  wsgi.py
backend/events/: admin.py  models.py
backend/events/migrations/: 0001_initial.py
backend/quizzes/: models.py  views.py
backend/site_app/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
backend/site_app/management/commands/: delete_old_stuff.py
backend/site_app/migrations/: 0001_initial.py  0003_alter_userextradata_date_birth_and_more.py  0008_contest_date_finished_contest_date_started.py  0009_alter_userextradata_avatar.py  0012_remove_userextradata_avatar.py  0013_alter_userextradata_date_birth_and_more.py  0014_alter_contest_pictures.py  0016_votes.py  0017_remove_votes_contest_votes_contest_and_more.py  0019_alter_picturecontestrating_picture.py  0020_alter_votes_user.py  0023_alter_picturecontestrating_picture.py  0024_alter_picturecontestrating_contest.py  0025_quizstatement.py  0027_delete_quizstatement.py
backend/templates/: base.html
backend/templates/elta/: front_page.html  login.html  logout.html  registration.html  userprofile.html
backend/templates/quizzes/: all_quizzes.html  quiz.html
elta/: asgi.py  settings.py  urls.py  wsgi.py
quizzes/: urls.py
site_app/: .admin.py.swp  admin.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
templates/: about_team.html  all_contests.html  all_users.html  base.html  quiz.html  (+11 more)
(+29 files in other folders)
