[tool.poetry]
name = "elta"
version = "0.1.0"
description = ""
authors = ["iverty <berezhnoy20025@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0.3"
Faker = "13.3.3"
django-crispy-forms = "1.14.0"
Pillow = "9.0.1"
django-extensions = "3.1.5"
ipython = "8.1.1"
psycopg2-binary = "2.9.3"
gunicorn = "20.1.0"

[tool.poetry.dev-dependencies]
flake8 = "3.8.4"
flake8-django = "1.1.2"
flake8-builtins = "1.5.3"
flake8-import-order = "0.18.1"
flake8-print = "4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
